<resources>
    <string name="app_name">Choose Me</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About</string>
    <string name="contact_us">Contact Us</string>


    <string name="back">Back</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>

    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>


    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>


    <string name="send">Send</string>
    <string name="ok">ok</string>
    <string name="no_data_to_show">No data to show</string>

    <string name="search2">Search</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="wait">Wait...</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="skip">Skip</string>
    <string name="service_provider">Service Provider</string>
    <string name="code">Code</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="field_required">Field Required</string>
    <string name="pass_short">Password too short</string>
    <string name="inv_email">Invalid email</string>
    <string name="dept">Department</string>
    <string name="ch_serv">Choose Services</string>
    <string name="inc_em_pas">Incorrect email or Password</string>
    <string name="depts">Departments</string>
    <string name="settings">Settings</string>
    <string name="all">All</string>
    <string name="most_view">Most View</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="no_image">No Image</string>
    <string name="price_in_hour">Price in hour</string>
    <string name="previous_work">Previous Works</string>
    <string name="no_works_to_display">No Works to Display</string>
    <string name="add">Add</string>
    <string name="update_profile">Update Profile</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="not_av">Not Available Now</string>
    <string name="title">Title</string>
    <string name="perm_img_denied">Permission denied</string>
    <string name="ch_img">Choose Image</string>


</resources>
