<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="backListener"
            type="com.endpoint.chooseme.interfaces.Listeners.BackListener" />


        <variable
            name="lang"
            type="String" />
        <variable
            name="title"
            type="String" />

        <variable
            name="content"
            type="String" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray0"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="12dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/gray2"
                        android:scaleType="fitXY"
                        app:riv_mutate_background="true"
                        app:riv_border_width="0dp"
                        app:riv_corner_radius="5dp"
                        />
                    <LinearLayout
                        android:id="@+id/llIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"

                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_image"
                            android:tint="@color/gray4"
                            android:clickable="false"
                            android:longClickable="false"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray4"
                            android:textSize="13sp"
                            android:text="@string/no_image"
                            android:clickable="false"
                            android:longClickable="false"
                            />
                    </LinearLayout>

                </FrameLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_border"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginTop="20dp"
                    >

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/title"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"

                        />


                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_border"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    >

                    <EditText
                        android:id="@+id/edtPrice"

                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/price"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="numberDecimal"

                        />




                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_green"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</layout>
