<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="loginModel"
            type="com.endpoint.chooseme.models.LoginModel" />

        <variable
            name="createAccountListener"
            type="com.endpoint.chooseme.interfaces.Listeners.CreateAccountListener" />

        <variable
            name="skipListener"
            type="com.endpoint.chooseme.interfaces.Listeners.SkipListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"


        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo2"

                />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintVertical_bias=".1"
                android:layout_marginTop="50dp"
                >

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/linear_shape"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_email"
                        android:tint="@color/colorPrimary" />

                    <EditText
                        error="@{loginModel.error_email}"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:text="@={loginModel.email}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/linear_shape"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_lock"
                        android:tint="@color/colorPrimary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:errorEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary"


                        >

                        <EditText
                            android:id="@+id/edt_password"
                            error="@{loginModel.error_password}"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:text="@={loginModel.password}"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray4"
                            android:textSize="14sp" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/transparent"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/linear_shape"
                        android:text="@string/log_in"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"

                        />



                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/new_account"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/btn_signup"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:text="@string/skip"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->skipListener.skip()}"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>